fix: align watch-online-wrapper-content__img

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -191,6 +191,7 @@ header {
   height: 673px;
   border-radius: 5px;
   object-fit: cover;
+  object-position: 0 -202px;
 }
 .letter-wrapper {
   display: inline-flex;
